Removed the public directory as it's the output from 'zola build' and fixed the scrollbar issue

--- a/static/styles.css
+++ b/static/styles.css
@@ -5,6 +5,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    scrollbar-gutter: stable both-edges;        /* SO IMPORTANT TO HANDLE PAGES LONGER THAN 100% */
 }
 h1, h2, h3, h4, h5, h6 {
     font-weight: 100;
